--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "@angular/service-worker": "~10.2.0",
+    "@popperjs/core": "^2.5.4",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^4.5.3",
+    "jquery": "^3.5.1",
+    "popper": "^1.0.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.10.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
