actualizado con catalogo

--- a/angular.json
+++ b/angular.json
@@ -30,9 +30,9 @@
               "node_modules/animate.css/animate.min.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/popper/index.js",
-              "node_modules/jquery/dist/jquery.js"
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
             ]
           },
           "configurations": {
